update mods and config

--- a/config/flueno.SmartContainers.cfg
+++ b/config/flueno.SmartContainers.cfg
@@ -173,7 +173,7 @@ prefixes = trophy,mead,arrow,armor,cape,helmet,atgeir,bow,battleaxe,knife,mace,s
 ## Enables Unload-all option & UI button [\||/]. Allows to batch-unload all eligible items from players inventory to their corresponding stacks & groups in nearby chests.
 # Setting type: Boolean
 # Default value: false
-enabled = true
+enabled = false
 
 ## Use existing 'place-stacks' UI button for unloading. If disabled - new UI button [\||/] will be created.
 # Setting type: Boolean
