--- a/config/org.bepinex.plugins.targetportal.cfg
+++ b/config/org.bepinex.plugins.targetportal.cfg
@@ -13,7 +13,7 @@ Lock Configuration = On
 # Setting type: Toggle
 # Default value: On
 # Acceptable values: Off, On
-Allow non public portals = On
+Allow non public portals = Off
 
 ## If on, the mod ignores non-vanilla portals.
 # Setting type: Toggle
@@ -72,7 +72,7 @@ Ignore item teleport restrictions = Default
 # Setting type: PortalMode
 # Default value: Private
 # Acceptable values: Public, Private, Group, Admin, Guild
-Default Portal mode = Private
+Default Portal mode = Public
 
 ## If on, the portal icons can be toggled on and off with the hotkey, even if the map is not opened.
 # Setting type: Toggle
