--- a/config/marcopogo.PlanBuild.cfg
+++ b/config/marcopogo.PlanBuild.cfg
@@ -7,7 +7,7 @@
 # Setting type: DefaultBuildMode
 # Default value: Planned
 # Acceptable values: Planned, Direct
-Default build mode = Planned
+Default build mode = Direct
 
 ## Set Piece health to its maximum value when directly building blueprints.
 # Setting type: Boolean
