--- a/config/advize.PlantEverything.cfg
+++ b/config/advize.PlantEverything.cfg
@@ -272,12 +272,12 @@ EnforceBiomes = false
 ## Restrict vanilla plantables (crops and saplings) to being placed in their respective biome.
 # Setting type: Boolean
 # Default value: true
-EnforceBiomesVanilla = true
+EnforceBiomesVanilla = false
 
 ## Controls whether plants need shielding to survive in hostile environments.
 # Setting type: Boolean
 # Default value: true
-PlantsRequireShielding = true
+PlantsRequireShielding = false
 
 ## Allows the cultivator to deconstruct decorative flora placed by a player. Useful for creative game types.
 # Setting type: Boolean
