--- a/config/randyknapp.mods.epicloot.cfg
+++ b/config/randyknapp.mods.epicloot.cfg
@@ -111,7 +111,7 @@ Set Item Drop Chance = 0.15
 ## A global percentage that modifies how likely items are to drop. 1 = Exactly what is in the loot tables will drop. 0 = Nothing will drop. 2 = The number of items in the drop table are twice as likely to drop (note, this doesn't double the number of items dropped, just doubles the relative chance for them to drop). Min = 0, Max = 4
 # Setting type: Single
 # Default value: 1
-Global Drop Rate Modifier = 1.5
+Global Drop Rate Modifier = 1
 
 ## Sets the chance that item drops are instead dropped as magic crafting materials. 0 = all items, no materials. 1 = all materials, no items. Values between 0 and 1 change the ratio of items to materials that drop. At 0.5, half of everything that drops would be items and the other half would be materials. Min = 0, Max = 1
 # Setting type: Single
@@ -177,7 +177,7 @@ Upgrades Active = false
 # Default value: Sacrifice, ConvertMaterials, Enchant, Augment, Disenchant, Upgrade
 # Acceptable values: None, Sacrifice, ConvertMaterials, Enchant, Augment, Disenchant, Upgrade
 # Multiple values can be set at the same time by separating them with , (e.g. Debug, Warning)
-Table Features Active = Sacrifice, ConvertMaterials, Enchant, Augment, Disenchant, Upgrade
+Table Features Active = Sacrifice, ConvertMaterials, Enchant, Augment, Upgrade
 
 [General]
 
