Improve epic loot, increase difficulty

--- a/config/flueno.SmartContainers.cfg
+++ b/config/flueno.SmartContainers.cfg
@@ -154,6 +154,11 @@ cookedMeat = CookedLoxMeat,NeckTailGrilled,MeatCooked,FishCooked,SerpentMeatCook
 # Default value: CarrotSoup,Sausages,QueensJam,SerpentStew,TurnipStew,BloodPudding
 food = CarrotSoup,Sausages,QueensJam,SerpentStew,TurnipStew,BloodPudding
 
+## user-added items-group based on item-names list
+# Setting type: String
+# Default value: swordsilver,battleaxe,shieldbronzebuckler,legswolf,helmetpadded,wishbone,legsrags,hammer
+userGroup1758175887 = swordsilver,battleaxe,shieldbronzebuckler,legswolf,helmetpadded,wishbone,legsrags,hammer
+
 [PostfixedItemGroups]
 
 ## If both item names end with same 'postfix' - they are considered to have same group. I.e. carrotSeeds & turnipSeeds
