--- a/config/org.bepinex.plugins.creaturelevelcontrol.cfg
+++ b/config/org.bepinex.plugins.creaturelevelcontrol.cfg
@@ -92,7 +92,7 @@ Detailed damage log = Off
 # Setting type: Difficulty
 # Default value: Medium
 # Acceptable values: Custom, Very_easy, Easy, Medium, Hard, Very_hard, Insane
-Difficulty = Hard
+Difficulty = Very_hard
 
 ## Change the second factor used to calculate the level up chances.
 # Setting type: DifficultySecondFactor
@@ -174,25 +174,25 @@ Increase creature size even in dungeons (where they might get stuck) = Off
 # Setting type: Single
 # Default value: 100
 # Acceptable value range: From 1 to 500
-Base health for creatures (percentage) = 120
+Base health for creatures (percentage) = 138
 
 ## Health gained per star for creatures in percentage.
 # Setting type: Single
 # Default value: 100
 # Acceptable value range: From 1 to 500
-Health gained per star for creatures (percentage) = 120
+Health gained per star for creatures (percentage) = 138
 
 ## Base damage for creatures in percentage.
 # Setting type: Single
 # Default value: 100
 # Acceptable value range: From 1 to 500
-Base damage for creatures (percentage) = 110
+Base damage for creatures (percentage) = 127
 
 ## Damage gained per star for creatures in percentage.
 # Setting type: Single
 # Default value: 50
 # Acceptable value range: From 1 to 500
-Damage gained per star for creatures (percentage) = 60
+Damage gained per star for creatures (percentage) = 69
 
 ## Base movement speed for creatures in percentage.
 # Setting type: Single
@@ -328,13 +328,13 @@ Boss size increase per star (percentage) = 5
 # Setting type: Single
 # Default value: 25
 # Acceptable value range: From 1 to 500
-Health gained per star for bosses (percentage) = 25
+Health gained per star for bosses (percentage) = 29
 
 ## Damage gained per star for bosses in percentage.
 # Setting type: Single
 # Default value: 10
 # Acceptable value range: From 1 to 500
-Damage gained per star for bosses (percentage) = 10
+Damage gained per star for bosses (percentage) = 12
 
 [5 - Age of world]
 
@@ -465,37 +465,37 @@ Distance from spawn for level 7 start = 7000
 # Setting type: Single
 # Default value: 10
 # Acceptable value range: From 0 to 100
-Chance for Aggressive effect to spawn (percentage) = 20
+Chance for Aggressive effect to spawn (percentage) = 23
 
 ## Chance for Curious effect creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 20
 # Acceptable value range: From 0 to 100
-Chance for Curious effect to spawn (percentage) = 30
+Chance for Curious effect to spawn (percentage) = 35
 
 ## Chance for Quick effect creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 10
 # Acceptable value range: From 0 to 100
-Chance for Quick effect to spawn (percentage) = 20
+Chance for Quick effect to spawn (percentage) = 23
 
 ## Chance for Regenerating effect creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 10
 # Acceptable value range: From 0 to 100
-Chance for Regenerating effect to spawn (percentage) = 20
+Chance for Regenerating effect to spawn (percentage) = 23
 
 ## Chance for Splitting effect creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 5
 # Acceptable value range: From 0 to 100
-Chance for Splitting effect to spawn (percentage) = 15
+Chance for Splitting effect to spawn (percentage) = 17
 
 ## Chance for Armored effect creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 3
 # Acceptable value range: From 0 to 100
-Chance for Armored effect to spawn (percentage) = 10
+Chance for Armored effect to spawn (percentage) = 12
 
 [6 - Creature Infusion chances]
 
@@ -503,37 +503,37 @@ Chance for Armored effect to spawn (percentage) = 10
 # Setting type: Single
 # Default value: 7
 # Acceptable value range: From 0 to 100
-Chance for Fire infusion to spawn (percentage) = 15
+Chance for Fire infusion to spawn (percentage) = 17
 
 ## Chance for Frost infusion creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 7
 # Acceptable value range: From 0 to 100
-Chance for Frost infusion to spawn (percentage) = 15
+Chance for Frost infusion to spawn (percentage) = 17
 
 ## Chance for Poison infusion creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 4
 # Acceptable value range: From 0 to 100
-Chance for Poison infusion to spawn (percentage) = 5
+Chance for Poison infusion to spawn (percentage) = 6
 
 ## Chance for Lightning infusion creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 3
 # Acceptable value range: From 0 to 100
-Chance for Lightning infusion to spawn (percentage) = 5
+Chance for Lightning infusion to spawn (percentage) = 6
 
 ## Chance for Spirit infusion creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 1.75
 # Acceptable value range: From 0 to 100
-Chance for Spirit infusion to spawn (percentage) = 5
+Chance for Spirit infusion to spawn (percentage) = 6
 
 ## Chance for Chaos infusion creatures to spawn (percentage).
 # Setting type: Single
 # Default value: 1.25
 # Acceptable value range: From 0 to 100
-Chance for Chaos infusion to spawn (percentage) = 5
+Chance for Chaos infusion to spawn (percentage) = 6
 
 ## Multiplier applied to base chances for infusions to spawn according to the number of stars of the creature. Chances for every amount of stars, from left to right, comma separated. Start with 0 stars. Defaults to 1.
 # Setting type: String
@@ -590,41 +590,41 @@ Chance for Twin affix to spawn (percentage) = 14.28571
 # Setting type: Single
 # Default value: 1
 # Acceptable value range: From 0.01 to 10
-Reflective base damage = 0.5
+Reflective base damage = 0.6
 
 ## Damage reduction for ammo in percent for the Shielded boss affix.
 # Setting type: Single
 # Default value: 50
 # Acceptable value range: From 1 to 100
-Shielded damage reduction (percentage) = 25
+Shielded damage reduction (percentage) = 28
 
 ## Multiplier for the Mending boss affix.
 # Setting type: Single
 # Default value: 1
 # Acceptable value range: From 0.01 to 10
-Mending healing factor = 0.3
+Mending healing factor = 0.35
 
 ## The number of summoning events over the course of the fight for the Summoner boss affix.
 # Setting type: Int32
 # Default value: 3
 # Acceptable value range: From 1 to 10
-Number of summons for Summoners = 2
+Number of summons for Summoners = 3
 
 ## Elemental damage increase for Elementalist boss affix.
 # Setting type: Single
 # Default value: 20
 # Acceptable value range: From 1 to 200
-Elementalist damage increase (percentage) = 10
+Elementalist damage increase (percentage) = 12
 
 ## Phyiscal damage increase for Enraged boss affix.
 # Setting type: Single
 # Default value: 20
 # Acceptable value range: From 1 to 200
-Enraged damage increase (percentage) = 10
+Enraged damage increase (percentage) = 12
 
 ## Health and damage for Twin boss affix.
 # Setting type: Single
 # Default value: 75
 # Acceptable value range: From 25 to 200
-Twin damage and health (percentage) = 50
+Twin damage and health (percentage) = 58
 
